add readme file and begin with specifications.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
   <body>
     <div class="container">
       <h1>Beep Boop My Numbers!</h1>
-      <form id="" type="text">
-        <label for=""></label>
-        <input type="text" name="" value="">
-        <button type="button" name="button"></button>
+      <form id="inputForm">
+        <label for="inputNumber">Enter a number!</label>
+        <input id="inputNumber" type="text">
+        <button type="submit" name="button">Show me my results!</button>
       </form>
     </div>
   </body>
 </html>
-      
