add submit function in the scripts file.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="container">
       <h1>Beep Boop My Numbers!</h1>
       <form id="inputForm">
-        <label for="inputNumber">Enter a number!</label>
-        <input id="inputNumber" type="text">
+        <label for="number">Enter a number!</label>
+        <input id="number" type="text">
         <button type="submit" name="button">Show me my results!</button>
       </form>
+      <p id="print"></p>
     </div>
   </body>
 </html>
