--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Beep Boop My Numbers!</h1>
-      <form id="inputForm">
+      <form class="numberForm">
         <label for="number">Enter a number!</label>
         <input id="number" type="text">
         <button type="submit" name="button">Show me my results!</button>
