--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <input id="number" type="text">
         <button type="submit" name="button">Show me my results!</button>
       </form>
-      <p id="print"></p>
+
+      <p id="result"></p>
     </div>
   </body>
 </html>
